2008-01-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libcsupport/src/__assert.c: Clean up and make __assert() call
	__assert_func().

2008-01-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/__assert.c: Newlib 1.16.0 adds __assert_func(). We
	need to have it also.

2008-01-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/Makefile.am: Add malloc_sbrk_helpers.c.
	* libcsupport/include/rtems/malloc.h,
	libcsupport/src/malloc.c, libcsupport/src/malloc_initialize.c,
	libcsupport/src/malloc_p.h,
	libcsupport/src/malloc_statistics_helpers.c: Make sbrk()
	support pluggable and optional.  This eliminates the need for
	heap extend and sbrk in the minimum footprint which is ~2.5K on
	the SPARC.
	* sapi/include/confdefs.h: Add the following configuration points:
	  + CONFIGURE_MALLOC_STATISTICS
	  + CONFIGURE_MALLOC_BSP_SUPPORTS_SBRK
	* libcsupport/src/malloc_sbrk_helpers.c: New file.

2008-01-08	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/Makefile.am: Add missing file.

2008-01-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/monitor/mon-manager.c: Style. Eliminate tabs.

2008-01-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/Makefile.am: Add new files.
	* libmisc/shell/internal.h: Prototype for rtems_shell_print_heap_info()
	* libmisc/shell/main_mallocinfo.c: Use rtems_shell_print_heap_info().
	* libmisc/shell/shellconfig.h: Add wkspace command.
	* libmisc/shell/main_wkspaceinfo.c,
	libmisc/shell/print_heapinfo.c: New files.

2008-01-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/inline/rtems/score/isr.inl: Fix spacing.
	* score/src/apimutexallocate.c: Fix spacing.
	* score/src/coremsgseize.c: Check for message pending instead of
	message pending count to avoid dead code from inlined chain routine.
	It checks if the chain is empty so is redundant to count == 0.

2008-01-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/src/eventseize.c, rtems/src/eventtimeout.c: Minor style clean
	up.
