@@ -60,8 +60,19 @@ int pthread_key_create(
         the_api <= OBJECTS_APIS_LAST;
         the_api++ ) {
 
-    if ( _Objects_Information_table[ the_api ] &&
-         _Objects_Information_table[ the_api ][ 1 ] ) {
+    if ( _Objects_Information_table[ the_api ] ) {
+      #if defined(RTEMS_DEBUG)
+        /*
+         * Currently all managers are installed if the API is installed.
+         * This would be a horrible implementation error.
+         */
+        if (_Objects_Information_table[ the_api ][ 1 ] == NULL )
+          _Internal_error_Occurred(
+            INTERNAL_ERROR_CORE,
+            TRUE,
+            INTERNAL_ERROR_IMPLEMENTATION
+          );
+      #endif 
       bytes_to_allocate = sizeof( void * ) *
         (_Objects_Information_table[ the_api ][ 1 ]->maximum + 1);
       table = _Workspace_Allocate( bytes_to_allocate );
