@@ -62,7 +62,8 @@ typedef enum {
   INTERNAL_ERROR_OUT_OF_PROXIES,
   INTERNAL_ERROR_INVALID_GLOBAL_ID,
   INTERNAL_ERROR_BAD_STACK_HOOK,
-  INTERNAL_ERROR_BAD_ATTRIBUTES
+  INTERNAL_ERROR_BAD_ATTRIBUTES,
+  INTERNAL_ERROR_IMPLEMENTATION_KEY_CREATE_INCONSISTENCY
 } Internal_errors_Core_list;
 
 /**
